Practica_04/bin/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones : definiciones definicion
   3               | definicion

   4  definicion : expression ';'
   5             | var_final ';'
   6             | function
   7             | call_function ';'
   8             | struct ';'
   9             | array_init ';'
  10             | PRINT print_values ';'
  11             | statement
  12             | RETURN expression ';'

  13  statement : while
  14            | if
  15            | return

  16  expression : expression '+' expression
  17             | expression '-' expression
  18             | expression '*' expression
  19             | expression '/' expression
  20             | expression '%' expression
  21             | expression '.' ID
  22             | expression '=' expression
  23             | expression '[' expression ']' '=' expression
  24             | expression '[' expression ']' '[' expression ']' '=' expression
  25             | expression '>' expression
  26             | expression '<' expression
  27             | expression '=' '=' expression
  28             | expression '>' '=' expression
  29             | expression '<' '=' expression
  30             | expression '!' '=' expression
  31             | '!' expression
  32             | '(' type ')' expression
  33             | INT_CONSTANT
  34             | REAL_CONSTANT
  35             | CHAR_CONSTANT
  36             | ID

  37  print_values : print_values ',' expression
  38               | expression
  39               | call_function

  40  var_final : ID ',' var_final
  41            | var

  42  var : expression ':' type
  43      | expression '[' expression ']' ':' type
  44      | expression '[' expression ']' '[' expression ']' ':' type
  45      | expression '[' ']' ':' type
  46      | expression '[' ']' '[' ']' ':' type

  47  array_init : expression ':' '[' expression ']' type
  48             | expression ':' '[' expression ']' '[' expression ']' type

  49  function : def ID '(' function_params ')' ':' type function_body

  50  function_params : function_params ',' var
  51                  | var
  52                  |

  53  function_body : '{' '}'
  54                | '{' definiciones '}'

  55  call_function : ID '(' call_function_params ')'

  56  call_function_params : call_function_params ',' expression
  57                       | expression
  58                       |

  59  return : RETURN ';'

  60  while : WHILE '(' condition ')' ':' function_body
  61        | WHILE condition ':' function_body

  62  if : IF '(' condition ')' ':' ifelse_body ELSE ifelse_body
  63     | IF '(' condition ')' ':' ifelse_body
  64     | IF condition ':' ifelse_body ELSE ifelse_body
  65     | IF condition ':' ifelse_body

  66  ifelse_body : '{' definiciones '}'
  67              | definicion

  68  condition : expression '|' '|' expression
  69            | expression "&&" expression
  70            | expression

  71  struct : expression ':' STRUCT '{' struct_body ';' '}'

  72  struct_body : struct_body ';' struct_params
  73              | struct_params

  74  struct_params : var
  75                | struct

  76  type : INT
  77       | REAL_TYPE
  78       | CHAR_TYPE
  79       | VOID

state 0
	$accept : . programa $end  (0)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	'!'  shift 11
	.  error

	programa  goto 12
	definiciones  goto 13
	definicion  goto 14
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	array_init  goto 20
	statement  goto 21
	while  goto 22
	if  goto 23
	return  goto 24
	var  goto 25


state 1
	expression : INT_CONSTANT .  (33)

	.  reduce 33


state 2
	expression : ID .  (36)
	var_final : ID . ',' var_final  (40)
	call_function : ID . '(' call_function_params ')'  (55)

	','  shift 26
	'('  shift 27
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	'%'  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	':'  reduce 36
	'='  reduce 36
	';'  reduce 36
	'.'  reduce 36
	'['  reduce 36
	'!'  reduce 36


state 3
	expression : CHAR_CONSTANT .  (35)

	.  reduce 35


state 4
	expression : REAL_CONSTANT .  (34)

	.  reduce 34


state 5
	function : def . ID '(' function_params ')' ':' type function_body  (49)

	ID  shift 28
	.  error


state 6
	definicion : RETURN . expression ';'  (12)
	return : RETURN . ';'  (59)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	';'  shift 30
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 31


state 7
	while : WHILE . '(' condition ')' ':' function_body  (60)
	while : WHILE . condition ':' function_body  (61)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 32
	'!'  shift 11
	.  error

	expression  goto 33
	condition  goto 34


state 8
	if : IF . '(' condition ')' ':' ifelse_body ELSE ifelse_body  (62)
	if : IF . '(' condition ')' ':' ifelse_body  (63)
	if : IF . condition ':' ifelse_body ELSE ifelse_body  (64)
	if : IF . condition ':' ifelse_body  (65)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 35
	'!'  shift 11
	.  error

	expression  goto 33
	condition  goto 36


state 9
	definicion : PRINT . print_values ';'  (10)

	INT_CONSTANT  shift 1
	ID  shift 37
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 38
	call_function  goto 39
	print_values  goto 40


state 10
	expression : '(' . type ')' expression  (32)

	INT  shift 41
	REAL_TYPE  shift 42
	CHAR_TYPE  shift 43
	VOID  shift 44
	.  error

	type  goto 45


state 11
	expression : '!' . expression  (31)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 46


state 12
	$accept : programa . $end  (0)

	$end  accept


state 13
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (2)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	'!'  shift 11
	$end  reduce 1

	definicion  goto 47
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	array_init  goto 20
	statement  goto 21
	while  goto 22
	if  goto 23
	return  goto 24
	var  goto 25


state 14
	definiciones : definicion .  (3)

	.  reduce 3


state 15
	definicion : expression . ';'  (4)
	expression : expression . '+' expression  (16)
	expression : expression . '-' expression  (17)
	expression : expression . '*' expression  (18)
	expression : expression . '/' expression  (19)
	expression : expression . '%' expression  (20)
	expression : expression . '.' ID  (21)
	expression : expression . '=' expression  (22)
	expression : expression . '[' expression ']' '=' expression  (23)
	expression : expression . '[' expression ']' '[' expression ']' '=' expression  (24)
	expression : expression . '>' expression  (25)
	expression : expression . '<' expression  (26)
	expression : expression . '=' '=' expression  (27)
	expression : expression . '>' '=' expression  (28)
	expression : expression . '<' '=' expression  (29)
	expression : expression . '!' '=' expression  (30)
	var : expression . ':' type  (42)
	var : expression . '[' expression ']' ':' type  (43)
	var : expression . '[' expression ']' '[' expression ']' ':' type  (44)
	var : expression . '[' ']' ':' type  (45)
	var : expression . '[' ']' '[' ']' ':' type  (46)
	array_init : expression . ':' '[' expression ']' type  (47)
	array_init : expression . ':' '[' expression ']' '[' expression ']' type  (48)
	struct : expression . ':' STRUCT '{' struct_body ';' '}'  (71)

	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'/'  shift 51
	'%'  shift 52
	'>'  shift 53
	'<'  shift 54
	':'  shift 55
	'='  shift 56
	';'  shift 57
	'.'  shift 58
	'['  shift 59
	'!'  shift 60
	.  error


state 16
	definicion : var_final . ';'  (5)

	';'  shift 61
	.  error


state 17
	definicion : function .  (6)

	.  reduce 6


state 18
	definicion : call_function . ';'  (7)

	';'  shift 62
	.  error


state 19
	definicion : struct . ';'  (8)

	';'  shift 63
	.  error


state 20
	definicion : array_init . ';'  (9)

	';'  shift 64
	.  error


state 21
	definicion : statement .  (11)

	.  reduce 11


state 22
	statement : while .  (13)

	.  reduce 13


state 23
	statement : if .  (14)

	.  reduce 14


state 24
	statement : return .  (15)

	.  reduce 15


state 25
	var_final : var .  (41)

	.  reduce 41


state 26
	var_final : ID ',' . var_final  (40)

	INT_CONSTANT  shift 1
	ID  shift 65
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 66
	var_final  goto 67
	var  goto 25


state 27
	call_function : ID '(' . call_function_params ')'  (55)
	call_function_params : .  (58)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	','  reduce 58
	')'  reduce 58

	expression  goto 68
	call_function_params  goto 69


state 28
	function : def ID . '(' function_params ')' ':' type function_body  (49)

	'('  shift 70
	.  error


state 29
	expression : ID .  (36)

	.  reduce 36


state 30
	return : RETURN ';' .  (59)

	.  reduce 59


state 31
	definicion : RETURN expression . ';'  (12)
	expression : expression . '+' expression  (16)
	expression : expression . '-' expression  (17)
	expression : expression . '*' expression  (18)
	expression : expression . '/' expression  (19)
	expression : expression . '%' expression  (20)
	expression : expression . '.' ID  (21)
	expression : expression . '=' expression  (22)
	expression : expression . '[' expression ']' '=' expression  (23)
	expression : expression . '[' expression ']' '[' expression ']' '=' expression  (24)
	expression : expression . '>' expression  (25)
	expression : expression . '<' expression  (26)
	expression : expression . '=' '=' expression  (27)
	expression : expression . '>' '=' expression  (28)
	expression : expression . '<' '=' expression  (29)
	expression : expression . '!' '=' expression  (30)

	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'/'  shift 51
	'%'  shift 52
	'>'  shift 53
	'<'  shift 54
	'='  shift 56
	';'  shift 71
	'.'  shift 58
	'['  shift 72
	'!'  shift 60
	.  error


state 32
	expression : '(' . type ')' expression  (32)
	while : WHILE '(' . condition ')' ':' function_body  (60)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	INT  shift 41
	REAL_TYPE  shift 42
	CHAR_TYPE  shift 43
	VOID  shift 44
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 33
	type  goto 45
	condition  goto 73


state 33
	expression : expression . '+' expression  (16)
	expression : expression . '-' expression  (17)
	expression : expression . '*' expression  (18)
	expression : expression . '/' expression  (19)
	expression : expression . '%' expression  (20)
	expression : expression . '.' ID  (21)
	expression : expression . '=' expression  (22)
	expression : expression . '[' expression ']' '=' expression  (23)
	expression : expression . '[' expression ']' '[' expression ']' '=' expression  (24)
	expression : expression . '>' expression  (25)
	expression : expression . '<' expression  (26)
	expression : expression . '=' '=' expression  (27)
	expression : expression . '>' '=' expression  (28)
	expression : expression . '<' '=' expression  (29)
	expression : expression . '!' '=' expression  (30)
	condition : expression . '|' '|' expression  (68)
	condition : expression . "&&" expression  (69)
	condition : expression .  (70)

	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'/'  shift 51
	'%'  shift 52
	'>'  shift 53
	'<'  shift 54
	"&&"  shift 74
	'='  shift 56
	'.'  shift 58
	'['  shift 72
	'!'  shift 60
	'|'  shift 75
	':'  reduce 70
	')'  reduce 70


state 34
	while : WHILE condition . ':' function_body  (61)

	':'  shift 76
	.  error


state 35
	expression : '(' . type ')' expression  (32)
	if : IF '(' . condition ')' ':' ifelse_body ELSE ifelse_body  (62)
	if : IF '(' . condition ')' ':' ifelse_body  (63)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	INT  shift 41
	REAL_TYPE  shift 42
	CHAR_TYPE  shift 43
	VOID  shift 44
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 33
	type  goto 45
	condition  goto 77


state 36
	if : IF condition . ':' ifelse_body ELSE ifelse_body  (64)
	if : IF condition . ':' ifelse_body  (65)

	':'  shift 78
	.  error


state 37
	expression : ID .  (36)
	call_function : ID . '(' call_function_params ')'  (55)

	'('  shift 27
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	'%'  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	'='  reduce 36
	';'  reduce 36
	','  reduce 36
	'.'  reduce 36
	'['  reduce 36
	'!'  reduce 36


state 38
	expression : expression . '+' expression  (16)
	expression : expression . '-' expression  (17)
	expression : expression . '*' expression  (18)
	expression : expression . '/' expression  (19)
	expression : expression . '%' expression  (20)
	expression : expression . '.' ID  (21)
	expression : expression . '=' expression  (22)
	expression : expression . '[' expression ']' '=' expression  (23)
	expression : expression . '[' expression ']' '[' expression ']' '=' expression  (24)
	expression : expression . '>' expression  (25)
	expression : expression . '<' expression  (26)
	expression : expression . '=' '=' expression  (27)
	expression : expression . '>' '=' expression  (28)
	expression : expression . '<' '=' expression  (29)
	expression : expression . '!' '=' expression  (30)
	print_values : expression .  (38)

	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'/'  shift 51
	'%'  shift 52
	'>'  shift 53
	'<'  shift 54
	'='  shift 56
	'.'  shift 58
	'['  shift 72
	'!'  shift 60
	';'  reduce 38
	','  reduce 38


state 39
	print_values : call_function .  (39)

	.  reduce 39


state 40
	definicion : PRINT print_values . ';'  (10)
	print_values : print_values . ',' expression  (37)

	';'  shift 79
	','  shift 80
	.  error


state 41
	type : INT .  (76)

	.  reduce 76


state 42
	type : REAL_TYPE .  (77)

	.  reduce 77


state 43
	type : CHAR_TYPE .  (78)

	.  reduce 78


state 44
	type : VOID .  (79)

	.  reduce 79


state 45
	expression : '(' type . ')' expression  (32)

	')'  shift 81
	.  error


state 46
	expression : expression . '+' expression  (16)
	expression : expression . '-' expression  (17)
	expression : expression . '*' expression  (18)
	expression : expression . '/' expression  (19)
	expression : expression . '%' expression  (20)
	expression : expression . '.' ID  (21)
	expression : expression . '=' expression  (22)
	expression : expression . '[' expression ']' '=' expression  (23)
	expression : expression . '[' expression ']' '[' expression ']' '=' expression  (24)
	expression : expression . '>' expression  (25)
	expression : expression . '<' expression  (26)
	expression : expression . '=' '=' expression  (27)
	expression : expression . '>' '=' expression  (28)
	expression : expression . '<' '=' expression  (29)
	expression : expression . '!' '=' expression  (30)
	expression : '!' expression .  (31)

	.  reduce 31


state 47
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 48
	expression : expression '+' . expression  (16)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 82


state 49
	expression : expression '-' . expression  (17)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 83


state 50
	expression : expression '*' . expression  (18)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 84


state 51
	expression : expression '/' . expression  (19)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 85


state 52
	expression : expression '%' . expression  (20)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 86


state 53
	expression : expression '>' . expression  (25)
	expression : expression '>' . '=' expression  (28)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'='  shift 87
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 88


state 54
	expression : expression '<' . expression  (26)
	expression : expression '<' . '=' expression  (29)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'='  shift 89
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 90


state 55
	var : expression ':' . type  (42)
	array_init : expression ':' . '[' expression ']' type  (47)
	array_init : expression ':' . '[' expression ']' '[' expression ']' type  (48)
	struct : expression ':' . STRUCT '{' struct_body ';' '}'  (71)

	STRUCT  shift 91
	INT  shift 41
	REAL_TYPE  shift 42
	CHAR_TYPE  shift 43
	VOID  shift 44
	'['  shift 92
	.  error

	type  goto 93


state 56
	expression : expression '=' . expression  (22)
	expression : expression '=' . '=' expression  (27)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'='  shift 94
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 95


state 57
	definicion : expression ';' .  (4)

	.  reduce 4


state 58
	expression : expression '.' . ID  (21)

	ID  shift 96
	.  error


state 59
	expression : expression '[' . expression ']' '=' expression  (23)
	expression : expression '[' . expression ']' '[' expression ']' '=' expression  (24)
	var : expression '[' . expression ']' ':' type  (43)
	var : expression '[' . expression ']' '[' expression ']' ':' type  (44)
	var : expression '[' . ']' ':' type  (45)
	var : expression '[' . ']' '[' ']' ':' type  (46)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	']'  shift 97
	'!'  shift 11
	.  error

	expression  goto 98


state 60
	expression : expression '!' . '=' expression  (30)

	'='  shift 99
	.  error


state 61
	definicion : var_final ';' .  (5)

	.  reduce 5


state 62
	definicion : call_function ';' .  (7)

	.  reduce 7


state 63
	definicion : struct ';' .  (8)

	.  reduce 8


state 64
	definicion : array_init ';' .  (9)

	.  reduce 9


state 65
	expression : ID .  (36)
	var_final : ID . ',' var_final  (40)

	','  shift 26
	'+'  reduce 36
	'-'  reduce 36
	'*'  reduce 36
	'/'  reduce 36
	'%'  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	':'  reduce 36
	'='  reduce 36
	'.'  reduce 36
	'['  reduce 36
	'!'  reduce 36


state 66
	expression : expression . '+' expression  (16)
	expression : expression . '-' expression  (17)
	expression : expression . '*' expression  (18)
	expression : expression . '/' expression  (19)
	expression : expression . '%' expression  (20)
	expression : expression . '.' ID  (21)
	expression : expression . '=' expression  (22)
	expression : expression . '[' expression ']' '=' expression  (23)
	expression : expression . '[' expression ']' '[' expression ']' '=' expression  (24)
	expression : expression . '>' expression  (25)
	expression : expression . '<' expression  (26)
	expression : expression . '=' '=' expression  (27)
	expression : expression . '>' '=' expression  (28)
	expression : expression . '<' '=' expression  (29)
	expression : expression . '!' '=' expression  (30)
	var : expression . ':' type  (42)
	var : expression . '[' expression ']' ':' type  (43)
	var : expression . '[' expression ']' '[' expression ']' ':' type  (44)
	var : expression . '[' ']' ':' type  (45)
	var : expression . '[' ']' '[' ']' ':' type  (46)

	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'/'  shift 51
	'%'  shift 52
	'>'  shift 53
	'<'  shift 54
	':'  shift 100
	'='  shift 56
	'.'  shift 58
	'['  shift 59
	'!'  shift 60
	.  error


state 67
	var_final : ID ',' var_final .  (40)

	.  reduce 40


state 68
	expression : expression . '+' expression  (16)
	expression : expression . '-' expression  (17)
	expression : expression . '*' expression  (18)
	expression : expression . '/' expression  (19)
	expression : expression . '%' expression  (20)
	expression : expression . '.' ID  (21)
	expression : expression . '=' expression  (22)
	expression : expression . '[' expression ']' '=' expression  (23)
	expression : expression . '[' expression ']' '[' expression ']' '=' expression  (24)
	expression : expression . '>' expression  (25)
	expression : expression . '<' expression  (26)
	expression : expression . '=' '=' expression  (27)
	expression : expression . '>' '=' expression  (28)
	expression : expression . '<' '=' expression  (29)
	expression : expression . '!' '=' expression  (30)
	call_function_params : expression .  (57)

	'+'  shift 48
	'-'  shift 49
	'*'  shift 50
	'/'  shift 51
	'%'  shift 52
	'>'  shift 53
	'<'  shift 54
	'='  shift 56
	'.'  shift 58
	'['  shift 72
	'!'  shift 60
	','  reduce 57
	')'  reduce 57


state 69
	call_function : ID '(' call_function_params . ')'  (55)
	call_function_params : call_function_params . ',' expression  (56)

	','  shift 101
	')'  shift 102
	.  error


state 70
	function : def ID '(' . function_params ')' ':' type function_body  (49)
	function_params : .  (52)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	','  reduce 52
	')'  reduce 52

	expression  goto 66
	var  goto 103
	function_params  goto 104


state 71
	definicion : RETURN expression ';' .  (12)

	.  reduce 12


state 72
	expression : expression '[' . expression ']' '=' expression  (23)
	expression : expression '[' . expression ']' '[' expression ']' '=' expression  (24)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 105


state 73
	while : WHILE '(' condition . ')' ':' function_body  (60)

	')'  shift 106
	.  error


state 74
	condition : expression "&&" . expression  (69)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 107


state 75
	condition : expression '|' . '|' expression  (68)

	'|'  shift 108
	.  error


state 76
	while : WHILE condition ':' . function_body  (61)

	'{'  shift 109
	.  error

	function_body  goto 110


state 77
	if : IF '(' condition . ')' ':' ifelse_body ELSE ifelse_body  (62)
	if : IF '(' condition . ')' ':' ifelse_body  (63)

	')'  shift 111
	.  error


state 78
	if : IF condition ':' . ifelse_body ELSE ifelse_body  (64)
	if : IF condition ':' . ifelse_body  (65)

	INT_CONSTANT  shift 1
	ID  shift 2
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	def  shift 5
	RETURN  shift 6
	WHILE  shift 7
	IF  shift 8
	PRINT  shift 9
	'('  shift 10
	'!'  shift 11
	'{'  shift 112
	.  error

	definicion  goto 113
	expression  goto 15
	var_final  goto 16
	function  goto 17
	call_function  goto 18
	struct  goto 19
	array_init  goto 20
	statement  goto 21
	while  goto 22
	if  goto 23
	return  goto 24
	var  goto 25
	ifelse_body  goto 114


state 79
	definicion : PRINT print_values ';' .  (10)

	.  reduce 10


state 80
	print_values : print_values ',' . expression  (37)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 115


state 81
	expression : '(' type ')' . expression  (32)

	INT_CONSTANT  shift 1
	ID  shift 29
	CHAR_CONSTANT  shift 3
	REAL_CONSTANT  shift 4
	'('  shift 10
	'!'  shift 11
	.  error

	expression  goto 116

